# net-questdb-client

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  docfx.json  docgen.ps1  docgen.sh  examples.manifest.yaml  index.md  net-questdb-client.sln  sender-pool-plan.md  toc.yml
.claude/: qwip-victor-action-plan-2026-05-05.md  qwip-victor-review-2026-05-05.md
.github/workflows/: docs.yml
ci/: azure-pipelines.yml  azurre-binaries-pipeline.yml  dispatch-enterprise-e2e.yml  run_tests_pipeline.yaml
docs/: examples.md  ingestion.md  introduction.md  querying.md  qwip-benchmarks.md  qwp-benchmarks.md  toc.yml
example-aot/: Program.cs  example-aot.csproj
net-questdb-client-tests/: ConfStrTests.cs  net-questdb-client-tests.csproj
src/: net-questdb-client.sln
src/dummy-http-server/: DummyHttpServer.cs  DummyQwpServer.cs  IlpEndpoint.cs  Program.cs  SettingsEndpoint.cs  dummy-http-server.csproj
src/example-aot/: Program.cs  example-aot.csproj
src/example-auth-http-tls/: Program.cs  example-auth-http-tls.csproj
src/example-auth-tls/: Program.cs  example-auth-tls.csproj
src/example-basic/: Program.cs  example-basic.csproj
src/example-qwp-ingest/: Program.cs  example-qwp-ingest.csproj
src/example-qwp-ingest-auth-tls/: Program.cs  example-qwp-ingest-auth-tls.csproj
src/example-qwp-query/: Program.cs  example-qwp-query.csproj
system_test/enterprise_e2e/: conftest.py  pyproject.toml
system_test/enterprise_e2e/sidecar/: Program.cs  net-questdb-client-e2e-sidecar.csproj
system_test/enterprise_e2e/tests/: test_net_client.py
(+390 files in other folders)
